<resources>
    <string name="app_name">Diet\'Ynov</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_recette">Recettes</string>
    <string name="home_weight">Mon poids</string>
    <string name="home_menstruations">Mes menstruations</string>
    <string name="home_account">Mon compte</string>
    <string name="account_title">Création du compte</string>
    <string name="account_size">Taille</string>
    <string name="account_birth">Date de naissance</string>
    <string name="account_start_weight">Poids de départ</string>
    <string name="account_gender">Sexe</string>
    <string name="account_submit">Enregistrer</string>
    <string name="title_activity_my_weight">MyWeightActivity</string>
    <string name="add_new_weight">AJOUTEZ NOUVEAU :</string>
    <string name="size">Taille</string>
    <string name="thigh">Cuisse</string>
    <string name="hip">Hanche</string>
    <string name="arms">Bras</string>
    <string name="title_activity_measures">MeasuresActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
