<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home_recette"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/home_recette"
            android:layout_marginEnd="15dp" />

        <Button
            android:id="@+id/home_weight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/home_weight"
            android:onClick="myWeight"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="217dp">

        <Button
            android:id="@+id/home_menstruations"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/home_menstruations"
            android:layout_marginEnd="15dp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/home_account"
            android:onClick="myAccount"/>
    </LinearLayout>
</LinearLayout>